Fixed long names on mobile

--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ body.profile aside.loading {
     .profile-grid section.main-info .profile-text {
         margin-left: 0;
         margin-top: 2em;
+        max-width: 100%;
     }
     .profile-grid section.products {
         grid-row: 2/3; /* Show above tasks */
